--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>Sivusto on tehty Jekyll-teknologialla!</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+        <p class="lead">Sivuston tarkoitus on esitellä sen omistajan portafolio<a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
       </div>
     </div>
     <!-- /.row -->
