--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -8,14 +8,14 @@
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="/1.html">
-                <img class="img-portfolio img-responsive" src="img/1r.png">
+                <img class="img-portfolio img-responsive" src="img/1r.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="/2.html">
-                <img class="img-portfolio img-responsive" src="img/2r.png">
+                <img class="img-portfolio img-responsive" src="img/2r.jpg">
               </a>
             </div>
           </div>
