--- a/_includes/portfolio3.html
+++ b/_includes/portfolio3.html
@@ -8,7 +8,13 @@
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="/9.html">
-                <img class="img-portfolio img-responsive" src="img/9.jpg">
+                <img class="img-portfolio img-responsive" src="img/9r.jpg">
+              </a>
+          </div>
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a href="/10.html">
+                <img class="img-portfolio img-responsive" src="img/10r.jpg">
               </a>
           </div>
           </div>
