--- a/_includes/portfolio3.html
+++ b/_includes/portfolio3.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-50 col-lg-offset-1 text-center">
-        <h2>Ongoing work:</h2>
+        <h2>Some animated FOSS4G-processes:</h2>
         <hr class="small">
         <div class="row">
           <div class="col-md-6">
@@ -10,13 +10,7 @@
               <a href="/9.html">
                 <img class="img-portfolio img-responsive" src="img/9r.jpg">
               </a>
-          </div>
-          <div class="col-md-6">
-            <div class="portfolio-item">
-              <a href="/10.html">
-                <img class="img-portfolio img-responsive" src="img/10r.jpg">
-              </a>
-          </div>
+            </div>
           </div>
         </div>
         <!-- /.row (nested) -->
