modify structure of the portfolios

--- a/_includes/portfolio3.html
+++ b/_includes/portfolio3.html
@@ -7,8 +7,29 @@
         <div class="row">
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="/9.html">
-                <img class="img-portfolio img-responsive" src="img/9r.jpg">
+              <a href="/5.html">
+                <img class="img-portfolio img-responsive" src="img/5.gif">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a href="/6.html">
+                <img class="img-portfolio img-responsive" src="img/6.gif">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a href="/7.html">
+                <img class="img-portfolio img-responsive" src="img/7.gif">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a href="/8.html">
+                <img class="img-portfolio img-responsive" src="img/8.gif">
               </a>
             </div>
           </div>
