--- a/_includes/portfolio2.html
+++ b/_includes/portfolio2.html
@@ -12,6 +12,13 @@
               </a>
             </div>
           </div>
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a href="/10.html">
+                <img class="img-portfolio img-responsive" src="img/10r.jpg">
+              </a>
+            </div>
+          </div>
         </div>
         <!-- /.row (nested) -->
         <!-- <a href="#" class="btn btn-dark">View More Items</a> -->
