udpates on structure and content

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>This is the porfolio of Santtu Pyykkönen</h2>
+        <h2>Santtu Pyykkönen</h2>
       </div>
     </div>
     <!-- /.row -->
