--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h3>Get to know my professional profile:</h3>
-        <a href="https://fi.linkedin.com/in/santtupyykkonen" class="btn btn-lg btn-light">LinkedIn-profile</a>
+        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/santtupyykkonen" data-format="inline" data-related="false"></script>
         <!-- <a href="#" class="btn btn-lg btn-dark">Look at Me!</a> -->
       </div>
     </div>
