--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-50 col-lg-offset-1 text-center">
-        <h2>Some outcomes of my work:</h2>
+        <h2>Outcomes of past and ongoing work:</h2>
         <hr class="small">
         <div class="row">
           <div class="col-md-6">
@@ -21,15 +21,15 @@
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="/3.html">
-                <img class="img-portfolio img-responsive" src="img/3r.jpg">
+              <a href="/9.html">
+                <img class="img-portfolio img-responsive" src="img/9r.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="/4.html">
-                <img class="img-portfolio img-responsive" src="img/4r.jpg">
+              <a href="/11.html">
+                <img class="img-portfolio img-responsive" src="img/11r.jpg">
               </a>
             </div>
           </div>
