updated the 2.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
-    <h1 style="color:white;">Portfolio: @SanttuVP</h1>
+    <h1 style="color:white;">Santtu Pyykkönen</h1>
     <h3 style="color:white;">Geospatial IT expert</h3>
     <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
