change the 12.htmal and make some structural changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
     <h1 style="color:white;">Santtu Pyykkönen</h1>
     <h3 style="color:white;">Geospatial IT expert</h3>
     <br>
-    <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+    <a href="#portfolio" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
 </header>
