change headed.html to include arrow

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,36 @@
 <header id="top" class="header">
+<style>
+i {
+ border: solid white;
+ border-width: 0 3px 3px 0;
+ display: inline-block;
+ padding: 3px;
+}
+
+.right {
+   transform: rotate(-45deg);
+   -webkit-transform: rotate(-45deg);
+}
+
+.left {
+   transform: rotate(135deg);
+   -webkit-transform: rotate(135deg);
+}
+
+.up {
+   transform: rotate(-135deg);
+   -webkit-transform: rotate(-135deg);
+}
+
+.down {
+   transform: rotate(45deg);
+   -webkit-transform: rotate(45deg);
+}
+</style>
   <div class="text-vertical-center">
     <h1 style="color:white;">Santtu Pyykkönen</h1>
     <h3 style="color:white;">Geospatial IT expert</h3>
     <br>
-    <a href="#portfolio" class="btn btn-dark btn-lg">Find Out More</a>
+    <a href="#portfolio" class="btn btn-dark btn-lg"><i class="arrow down"></i></a>
   </div>
 </header>
